--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Zakjakub\\ChemieZijeTheme\\": "ChemieZijeTheme"
+      "Zakjakub\\ChemieZijeTheme\\": "src"
     },
     "classmap": [
       ""
