--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     "squizlabs/php_codesniffer": "^3.5.8",
     "phpunit/phpunit": "7.*",
     "roots/wordpress": "^5.6",
-    "automattic/wordbless": "^0.1.0"
+    "automattic/wordbless": "^0.1.0",
+    "htmlburger/carbon-fields": "~3.1"
   },
   "autoload": {
     "psr-4": {
