--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     "phpunit/phpunit": "7.*",
     "roots/wordpress": "^5.6",
     "automattic/wordbless": "^0.1.0",
-    "htmlburger/carbon-fields": "~3.1"
+    "htmlburger/carbon-fields": "^3.2"
   },
   "autoload": {
     "psr-4": {
