--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,11 @@
   "require": {
     "php": ">=8.0",
     "timber/timber": "^2.x-dev",
-    "wpackio/enqueue": "^2.2"
+    "wpackio/enqueue": "^2.2",
+    "hellonico/timber-dump-extension": "dev-master"
   },
   "require-dev": {
-    "roave/security-advisories": "dev-master",
+    "roave/security-advisories": "dev-latest",
     "squizlabs/php_codesniffer": "^3.5.8",
     "phpunit/phpunit": "7.*",
     "roots/wordpress": "^5.6",
