--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "@wpackio/scripts": "^5.0.0",
+    "autoprefixer": "^9.8.6",
     "fork-ts-checker-webpack-plugin": "^6.0.8",
     "sass": "^1.30.0",
     "typescript": "^4.1.3"
