--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "@wpackio/scripts": "^5.0.0",
-    "autoprefixer": "^9.8.6",
-    "fork-ts-checker-webpack-plugin": "^6.0.8",
-    "sass": "^1.30.0",
+    "@wpackio/scripts": "^6.4.0",
+    "autoprefixer": "^10.3.1",
+    "fork-ts-checker-webpack-plugin": "^6.3.1",
+    "sass": "^1.32.8",
     "typescript": "^4.1.3"
   },
   "scripts": {
@@ -16,8 +16,8 @@
     "archive": "wpackio-scripts pack"
   },
   "dependencies": {
-    "@wpackio/entrypoint": "^5.0.0",
-    "bootstrap": "^5.0.0-beta1",
+    "@wpackio/entrypoint": "^6.4.0",
+    "bootstrap": "^5.1.0",
     "swiper": "^6.7.0"
   }
 }
