--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,12 @@
   "require": {
     "php": ">=8.0",
     "timber/timber": "^2.x-dev",
-    "wpackio/enqueue": "^3.4.0",
+    "wpackio/enqueue": "dev-master",
     "hellonico/timber-dump-extension": "dev-master"
   },
   "require-dev": {
     "roave/security-advisories": "dev-latest",
     "squizlabs/php_codesniffer": "^3.6.0",
-    "phpunit/phpunit": "7.*",
     "roots/wordpress": "^5.7",
     "automattic/wordbless": "^0.3",
     "htmlburger/carbon-fields": "^3.2"
