--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@wpackio/scripts": "^6.4.0",
     "autoprefixer": "^10.3.1",
     "fork-ts-checker-webpack-plugin": "^6.3.1",
-    "sass": "^1.32.8",
-    "typescript": "^4.1.3"
+    "postcss": "^8.3.11",
+    "sass": "^1.43.4",
+    "typescript": "^4.1.3",
+    "webpack": "^5"
   },
   "scripts": {
     "bootstrap": "wpackio-scripts bootstrap",
