--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "archive": "wpackio-scripts pack"
   },
   "dependencies": {
+    "@popperjs/core": "^2.10.2",
     "@wpackio/entrypoint": "^6.4.0",
     "bootstrap": "^5.1.0",
     "swiper": "^6.7.0"
