Implemented new/updated requirements.

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
     "php": ">=8.0",
     "timber/timber": "^2.x-dev",
     "wpackio/enqueue": "^3.4.0",
-    "hellonico/timber-dump-extension": "dev-master"
+    "hellonico/timber-dump-extension": "dev-master",
+    "ext-curl": "*",
+    "ext-simplexml": "*"
   },
   "require-dev": {
     "roave/security-advisories": "dev-latest",
