Implemented new/updated requirements.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.10.2",
+    "@wordpress/block-editor": "^8.0.7",
+    "@wordpress/blocks": "^11.1.4",
     "@wpackio/entrypoint": "^6.4.0",
     "bootstrap": "^5.1.0",
     "swiper": "^6.7.0"
