--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "private": true,
   "devDependencies": {
     "@wpackio/scripts": "^6.4.0",
-    "autoprefixer": "^10.3.1",
-    "fork-ts-checker-webpack-plugin": "^6.3.1",
-    "postcss": "^8.3.11",
-    "sass": "^1.43.4",
-    "typescript": "^4.1.3",
-    "webpack": "^5"
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.5",
+    "sass": "^1.47.0",
+    "typescript": "^4.5.4"
   },
   "scripts": {
     "bootstrap": "wpackio-scripts bootstrap",
@@ -19,10 +17,9 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.10.2",
-    "@wordpress/block-editor": "^8.0.7",
     "@wpackio/entrypoint": "^6.4.0",
     "bootstrap": "^5.1.0",
     "chemcalc": "^3.4.1",
-    "swiper": "^6.7.0"
+    "swiper": "^6.8.4"
   }
 }
