--- a/composer.json
+++ b/composer.json
@@ -20,16 +20,16 @@
   ],
   "require": {
     "php": ">=8.0",
-    "timber/timber": "^2.x-dev",
-    "wpackio/enqueue": "^3.4.0",
+    "timber/timber": "^2.0.0-rc.1",
+    "wpackio/enqueue": "^3.5.0",
     "hellonico/timber-dump-extension": "dev-master"
   },
   "require-dev": {
     "roave/security-advisories": "dev-latest",
-    "squizlabs/php_codesniffer": "^3.6.0",
-    "roots/wordpress": "^5.7",
-    "automattic/wordbless": "^0.3",
-    "htmlburger/carbon-fields": "^3.2"
+    "squizlabs/php_codesniffer": "^3.6",
+    "roots/wordpress": "^6.3",
+    "automattic/wordbless": "^0.4",
+    "htmlburger/carbon-fields": "^3.6"
   },
   "autoload": {
     "psr-4": {
@@ -40,7 +40,11 @@
     ]
   },
   "config": {
-    "optimize-autoloader": true
+    "optimize-autoloader": true,
+    "allow-plugins": {
+      "composer/installers": true,
+      "roots/wordpress-core-installer": true
+    }
   },
   "extra": {
     "installer-paths": {
