--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   ],
   "require": {
     "php": ">=8.2",
-    "timber/timber": "^2.0.0-rc.1",
+    "timber/timber": "^2.0.0",
     "wpackio/enqueue": "^3.5.0",
     "hellonico/timber-dump-extension": "dev-master"
   },
